# study_resource_agent

./: README.md  pyproject.toml
db/: chroma.sqlite3
src/study_resource_agent/: crew.py  main.py
src/study_resource_agent/config/: agents.yaml  tasks.yaml
src/study_resource_agent/tools/: custom_tool.py
